@@ -1,43 +1,52 @@
 package operations;
 
+import br.upe.operations.CRUDInterface;
 import br.upe.operations.SessionCRUD;
 import br.upe.operations.SubscriptionCRUD;
 import br.upe.pojos.Session;
 import br.upe.pojos.Subscription;
 import org.junit.jupiter.api.*;
-
+import java.util.logging.Level;
+import java.util.logging.Logger;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.io.*;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-public class SessionCRUDTest {
-
+class SessionCRUDTest {
+    private static final String STATE_PATH = ".\\state";
+    private static final String SUBSCRIPTIONS_PATH = STATE_PATH+"\\subscriptions.csv";
+    private static final String SESSION_PATH = STATE_PATH+"\\sessions.csv";
+    private static final Logger logger = Logger.getLogger(SessionCRUDTest.class.getName());
     private SessionCRUD sessionCRUD;
     private SubscriptionCRUD subscriptionCRUD;
 
-    @BeforeAll
-    public static void clearFiles() {
-        try (BufferedWriter buffer = new BufferedWriter(new FileWriter(".\\state\\sessions.csv"))) {
-            buffer.write(""); // Limpa o conteúdo do arquivo sessions.csv
+    @AfterEach
+    void clearFiles() {
+        try {
+            Files.deleteIfExists(Paths.get(SESSION_PATH));
+            Files.deleteIfExists(Paths.get(SUBSCRIPTIONS_PATH));
         } catch (IOException e) {
-            e.printStackTrace();
+            logger.log(Level.SEVERE, "Error when trying to delete files", e);
         }
-        try (BufferedWriter buffer = new BufferedWriter(new FileWriter(".\\state\\subscriptions.csv"))) {
-            buffer.write(""); // Limpa o conteúdo do arquivo subscriptions.csv
+
+        try {
+            Files.deleteIfExists(Paths.get(STATE_PATH));
         } catch (IOException e) {
-            e.printStackTrace();
+            logger.log(Level.SEVERE, "Error when trying to delete directory", e);
         }
     }
 
     @BeforeEach
     public void setUp() {
-        sessionCRUD = new SessionCRUD();
-        subscriptionCRUD = new SubscriptionCRUD();
+        sessionCRUD = CRUDInterface.newSessionCRUD();
+        subscriptionCRUD = CRUDInterface.newSubscriptionCRUD();
     }
 
     @Test
-    public void testCreateSession() {
+    void testCreateSession() {
         // Criar e salvar uma subscrição
         Subscription subscription = new Subscription();
         UUID subscriptionUuid = UUID.randomUUID();
@@ -65,11 +74,11 @@ public class SessionCRUDTest {
         List<Subscription> retrievedSubscriptions = (List<Subscription>) retrievedSession.getSubscriptions();
         assertNotNull(retrievedSubscriptions, "A lista de subscrições não deve ser nula.");
         assertEquals(1, retrievedSubscriptions.size(), "A lista de subscrições deve conter um item.");
-        assertEquals(subscription.getUuid(), retrievedSubscriptions.get(0).getUuid(), "O UUID da subscrição deve ser igual ao esperado.");
+        assertEquals(subscription.getUuid(), retrievedSubscriptions.getFirst().getUuid(), "O UUID da subscrição deve ser igual ao esperado.");
     }
 
     @Test
-    public void testDeleteSession() {
+    void testDeleteSession() {
         // Criar e salvar uma subscrição
         Subscription subscription = new Subscription();
         UUID subscriptionUuid = UUID.randomUUID();
@@ -99,7 +108,7 @@ public class SessionCRUDTest {
     }
 
     @Test
-    public void testUpdateSession() {
+    void testUpdateSession() {
         // Criar e salvar uma subscrição
         Subscription subscription = new Subscription();
         UUID subscriptionUuid = UUID.randomUUID();
@@ -137,11 +146,11 @@ public class SessionCRUDTest {
         List<Subscription> retrievedSubscriptions = (List<Subscription>) retrievedSession.getSubscriptions();
         assertNotNull(retrievedSubscriptions, "A lista de subscrições não deve ser nula.");
         assertEquals(1, retrievedSubscriptions.size(), "A lista de subscrições deve conter um item.");
-        assertEquals(subscription.getUuid(), retrievedSubscriptions.get(0).getUuid(), "O UUID da subscrição deve ser igual ao esperado.");
+        assertEquals(subscription.getUuid(), retrievedSubscriptions.getFirst().getUuid(), "O UUID da subscrição deve ser igual ao esperado.");
     }
 
     @Test
-    public void testReturnSession() {
+    void testReturnSession() {
         // Criar e salvar uma subscrição
         Subscription subscription = new Subscription();
         UUID subscriptionUuid = UUID.randomUUID();
@@ -171,6 +180,49 @@ public class SessionCRUDTest {
         List<Subscription> retrievedSubscriptions = (List<Subscription>) retrievedSession.getSubscriptions();
         assertNotNull(retrievedSubscriptions, "A lista de subscrições não deve ser nula.");
         assertEquals(1, retrievedSubscriptions.size(), "A lista de subscrições deve conter um item.");
-        assertEquals(subscription.getUuid(), retrievedSubscriptions.get(0).getUuid(), "O UUID da subscrição deve ser igual ao esperado.");
+        assertEquals(subscription.getUuid(), retrievedSubscriptions.getFirst().getUuid(), "O UUID da subscrição deve ser igual ao esperado.");
     }
+
+    @Test
+    void testReturnAllSessions() {
+        // Criar e salvar uma subscrição
+        Subscription subscription = new Subscription();
+        UUID subscriptionUuid = UUID.randomUUID();
+        subscription.setUuid(subscriptionUuid);
+        subscription.setSessionUuid(UUID.randomUUID());
+        subscription.setUserUuid(UUID.randomUUID());
+        subscription.setDate(new Date());
+        subscriptionCRUD.createSubscription(subscription);
+
+        // Criar e salvar uma sessão
+        Session session = new Session();
+        UUID sessionUuid = UUID.randomUUID();
+        session.setUuid(sessionUuid);
+        session.setEventUuid(UUID.randomUUID());
+        session.setDescritor("Session for Return Test");
+        session.setStartDate(new Date());
+        session.setEndDate(new Date());
+        session.setSubscriptions(Collections.singletonList(subscription)); // session shares the same subscription
+        sessionCRUD.createSession(session);
+
+        Session session1 = new Session();
+        session1.setUuid(UUID.randomUUID());
+        session1.setEventUuid(UUID.randomUUID());
+        session1.setDescritor("Session1 for Return Test");
+        session1.setStartDate(new Date());
+        session1.setEndDate(new Date());
+        session1.setSubscriptions(Collections.singletonList(subscription)); // session1 also shares the same subscription
+        sessionCRUD.createSession(session1);
+
+        // Retrieve all sessions
+        Collection<Session> retrievedSessions = SessionCRUD.returnSession();
+        assertNotNull(retrievedSessions, "As sessões retornadas não devem ser nulas.");
+        assertEquals(2, retrievedSessions.size(), "A lista de sessões deve conter dois itens.");
+
+        // Check subscriptions for the first session
+        Collection<Subscription> retrievedSubscriptions = retrievedSessions.iterator().next().getSubscriptions();
+        assertNotNull(retrievedSubscriptions, "A lista de subscrições não deve ser nula.");
+        assertEquals(1, retrievedSubscriptions.size(), "A lista de subscrições deve conter um item.");
+    }
+
 }
