@@ -3,38 +3,45 @@ package operations;
 import br.upe.operations.SubscriptionCRUD;
 import br.upe.pojos.Subscription;
 import org.junit.jupiter.api.*;
-
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.io.*;
-import java.nio.file.*;
 import java.time.*;
 import java.util.*;
-//import java.util.stream.Stream;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-@TestInstance(TestInstance.Lifecycle.PER_CLASS)
-public class SubscriptionCRUDTest {
-    private SubscriptionCRUD subscriptionCRUD;
-    private final String filePath = ".\\state\\subscriptions.csv";
 
-    @BeforeAll
+class SubscriptionCRUDTest {
+    private SubscriptionCRUD subscriptionCRUD;
+    private static final String STATE_PATH = ".\\state";
+    private static final String SUBSCRIPTIONS_PATH = STATE_PATH+"\\subscriptions.csv";
+    private static final Logger logger = Logger.getLogger(SubscriptionCRUDTest.class.getName());
+
+    @BeforeEach
     public void setup() {
         subscriptionCRUD = new SubscriptionCRUD();
     }
 
-    @BeforeEach
-    public void cleanFile() throws IOException {
-        Files.deleteIfExists(Paths.get(filePath));
-        Files.createFile(Paths.get(filePath));
-    }
+    @AfterEach
+    void clearFiles() {
+        try {
+            Files.deleteIfExists(Paths.get(SUBSCRIPTIONS_PATH));
+        } catch (IOException e) {
+            logger.log(Level.SEVERE, "Error when trying to delete files", e);
+        }
 
-    @AfterAll
-    public void tearDown() throws IOException {
-        //deleteDirectoryRecursively(Paths.get(".\\state"));
+        try {
+            Files.deleteIfExists(Paths.get(STATE_PATH));
+        } catch (IOException e) {
+            logger.log(Level.SEVERE, "Error when trying to delete directory", e);
+        }
     }
 
     @Test
-    public void testCreateSubscription() throws IOException {
+    void testCreateSubscription() throws IOException {
         Subscription subscription = new Subscription();
         subscription.setUuid(UUID.randomUUID());
         subscription.setSessionUuid(UUID.randomUUID());
@@ -42,13 +49,13 @@ public class SubscriptionCRUDTest {
         subscription.setDate(Date.from(Instant.now()));
         subscriptionCRUD.createSubscription(subscription);
 
-        List<String> lines = Files.readAllLines(Paths.get(filePath));
+        List<String> lines = Files.readAllLines(Paths.get(SUBSCRIPTIONS_PATH));
         assertEquals(1, lines.size());
-        assertTrue(lines.get(0).contains(subscription.getUuid().toString()));
+        assertTrue(lines.getFirst().contains(subscription.getUuid().toString()));
     }
 
     @Test
-    public void testDeleteSubscription() throws IOException {
+    void testDeleteSubscription() throws IOException {
         UUID uuidToDelete = UUID.randomUUID();
         Subscription subscription1 = new Subscription();
         subscription1.setUuid(uuidToDelete);
@@ -65,13 +72,13 @@ public class SubscriptionCRUDTest {
 
         subscriptionCRUD.deleteSubscription(uuidToDelete);
 
-        List<String> lines = Files.readAllLines(Paths.get(filePath));
+        List<String> lines = Files.readAllLines(Paths.get(SUBSCRIPTIONS_PATH));
         assertEquals(1, lines.size());
-        assertFalse(lines.get(0).contains(uuidToDelete.toString()));
+        assertFalse(lines.getFirst().contains(uuidToDelete.toString()));
     }
 
     @Test
-    public void testUpdateSubscription() throws IOException {
+    void testUpdateSubscription() throws IOException {
         UUID uuidToUpdate = UUID.randomUUID();
         Subscription original = new Subscription();
         original.setUuid(uuidToUpdate);
@@ -87,13 +94,13 @@ public class SubscriptionCRUDTest {
 
         subscriptionCRUD.updateSubscription(uuidToUpdate, updated);
 
-        List<String> lines = Files.readAllLines(Paths.get(filePath));
+        List<String> lines = Files.readAllLines(Paths.get(SUBSCRIPTIONS_PATH));
         assertEquals(1, lines.size());
-        assertTrue(lines.get(0).contains(updated.getDate().toInstant().toString()));
+        assertTrue(lines.getFirst().contains(updated.getDate().toInstant().toString()));
     }
 
     @Test
-    public void testReturnSubscriptionByUuid() {
+    void testReturnSubscriptionByUuid() {
         UUID uuidToReturn = UUID.randomUUID();
         Subscription subscription = new Subscription();
         subscription.setUuid(uuidToReturn);
@@ -108,7 +115,7 @@ public class SubscriptionCRUDTest {
     }
 
     @Test
-    public void testReturnAllSubscriptions() {
+    void testReturnAllSubscriptions() {
         Subscription subscription1 = new Subscription();
         subscription1.setUuid(UUID.randomUUID());
         subscription1.setSessionUuid(UUID.randomUUID());
@@ -125,19 +132,4 @@ public class SubscriptionCRUDTest {
         Collection<Subscription> subscriptions = SubscriptionCRUD.returnSubscription();
         assertEquals(2, subscriptions.size());
     }
-// Provavelmente vai virar um de teste
-//    private void deleteDirectoryRecursively(Path path) throws IOException {
-//        if (Files.exists(path)) {
-//            try (Stream<Path> paths = Files.walk(path)) {
-//                paths.sorted(Comparator.reverseOrder())
-//                        .forEach(file -> {
-//                            try {
-//                                Files.delete(file);
-//                            } catch (IOException e) {
-//                                e.printStackTrace();
-//                            }
-//                        });
-//            }
-//        }
-//    }
 }
